* New: You can now use the CSS class `tb-scoll-to` to set any generic button or link to scroll to an element ID on the current page.
* New: Template file `content-blog.php` for the blog post style has been added.
* New: Added filter `themeblvd_posts_page_mode`, which can be filter to list, grid, or showcase.
* New: Featured Media
    * New "Epic Thumbnails" on single posts; see Post and Page Options meta boxes for new featured images display options.
    * New variable-width slider carousel for gallery posts; see *Appearance > Theme Options > Content > General*.
    * Default gallery slider image size was increased from 1200x450 to 1400x525, when not using new variable width carousel.
    * Removed banner functionality; you can restore with [Jump Start Banners](http://wordpress.org/plugins/jumpstart-banners) plugin.
* Improvement: Expanded video background support.
    * YouTube and Vimeo support added.
    * Simplified options for inputting video.
    * Additional HTML5 video formats (mp4, webm, ogv) automatically included, if exist.
    * Better dynamic video re-sizing to fit area, based on inputted aspect ratio.
    * Progressive loading for longer videos.
    * Fallback image now displays on large mobile devices, where background video isn't supported.
* Improvement: Design for post in blog and single post has been simplified.
* Improvement: Design enhancements to default post showcase display.
* Improvement: Design enhancements to Magnific Popup lightbox navigation.
* Improvement: Design enhancements to Divider element.
* Improvement: Design enhancements to Progress Bars element.
* Improvement: Design enhancements to Milestone element.
* Improvement: Design enhancements to Milestone Ring element.
* Improvement: Design enhancements to Testimonial element.
* Improvement: Better mobile fallback for parallax background images.
* Improvement: Redesign of Team Member element.