@@ -61,6 +61,7 @@
  * 12.0 - Plugins
  *   12.1 - FlexSlider
  *   12.2 - Nivo Slider
+ *   12.3 - Subtitles
  * 13.0 - Sliders
  *   13.1 - Slider (universal)
  *   13.2 - Slider Fallback for mobile
@@ -1842,6 +1843,16 @@ html[xmlns] .flexslider .slides {
 }
 .nivo-html-caption {
     display:none;
+}
+
+/* Subtitles */
+span.entry-subtitle {
+	display: block;
+	font-size: 0.53333333333333em;
+	margin-top: .4em;
+}
+#comments .comments-title span.entry-subtitle {
+	display: none;
 }
 
 /* =Sliders
